--- a/csv_import/carrefour.ipynb
+++ b/csv_import/carrefour.ipynb
@@ -2,20 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python: 3.7.3 (default, Mar 27 2019, 16:54:48) \n",
-      "[Clang 4.0.1 (tags/RELEASE_401/final)]\n",
-      "scipy: 1.3.0\n",
-      "numpy: 1.16.4\n",
-      "matplotlib: 3.1.0\n",
-      "pandas: 0.24.2\n",
-      "sklearn: 0.21.2\n"
+      "Python: 3.6.5 |Anaconda, Inc.| (default, Mar 29 2018, 13:32:41) [MSC v.1900 64 bit (AMD64)]\n",
+      "scipy: 1.1.0\n",
+      "numpy: 1.14.3\n",
+      "matplotlib: 2.2.2\n",
+      "pandas: 0.23.0\n",
+      "sklearn: 0.19.1\n"
      ]
     }
    ],
@@ -41,9 +40,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The import has finished\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas\n",
     "import collections\n",
@@ -58,12 +65,44 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
     "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.svm import SVC"
+    "from sklearn.svm import SVC\n",
+    "print('The import has finished')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = pandas.read_csv('dataset/REF_PRODUIT_TAGS_train.csv',sep='|')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def strtolist(s):\n",
+    "    \"\"\" '[A,b,c d]'->['A','b','c d'] \"\"\"\n",
+    "    s = s.strip(\"[]\")\n",
+    "    s = s.split(',')\n",
+    "    return s\n",
+    "\n",
+    "def get_tags(dataset):\n",
+    "    \"\"\" take a dataset, return dict with # of occurence of tags \"\"\"\n",
+    "    dic = collections.defaultdict(int)\n",
+    "    for x in dataset['tags']:\n",
+    "        new_list = strtolist(x)\n",
+    "        for tag in new_list:\n",
+    "            dic[tag] += 1\n",
+    "    return dic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -79,62 +118,22 @@
        "1889"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset = pandas.read_csv('dataset/REF_PRODUIT_TAGS_train.csv',sep='|')\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "def strtolist(s):\n",
-    "    s = s.strip(\"[]\")\n",
-    "    s = s.split(',')\n",
-    "    return s\n",
-    "def get_tags(dataset):\n",
-    "    dic = collections.defaultdict(int)\n",
-    "    for x in dataset['tags']:\n",
-    "        new_list = strtolist(x)\n",
-    "        for tag in new_list:\n",
-    "            dic[tag] += 1\n",
-    "    return dic\n",
     "tags = get_tags(dataset)\n",
+    "\n",
     "print(tags)\n",
+    "\n",
     "len([i for i in tags.keys() if tags[i] < 2])\n",
     "        \n",
     "#for x in dataset['tags'][:10]:\n",
     "#    print(repr(x))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(dataset.groupby('tags').size())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "defaultdict(int, {'bonjour': 1})"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
@@ -153,7 +152,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
