--- a/csv_import/carrefour.ipynb
+++ b/csv_import/carrefour.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -1593,7 +1593,7 @@
        "[18229 rows x 16 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1624,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1638,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -1647,7 +1647,7 @@
        "{'KG', 'L', 'U', nan}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1658,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -3184,7 +3184,7 @@
        "[17271 rows x 16 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3224,7 +3224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -3233,7 +3233,7 @@
        "{'KG', 'L', 'Not described', 'U'}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3244,7 +3244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -3253,7 +3253,7 @@
        "17271"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3264,7 +3264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3288,8 +3288,7 @@
     "def sigmoid(x):\n",
     "     return 1 / (1 + math.exp(-x))\n",
     "def extract(dataset):    \n",
-    "    useful_data_info = ['Rayon', 'Famille','SEG_REF_CAPA_TYPE', \n",
-    "                        'SANS_SUCRE', 'PORC', 'SANS_GLUTEN', 'BIO']\n",
+    "    useful_data_info = ['Rayon', 'Famille','Sous_famille','SEG_REF_CAPA_TYPE','PORC','SANS_GLUTEN','BIO','CASHER','HALAL']\n",
     "\n",
     "    products = [None] * len(dataset['Rayon'])\n",
     "    for i in range(len(products)):\n",
@@ -3305,7 +3304,7 @@
     "            \n",
     "            for i in range(len(list_)):\n",
     "                if list_[i] == element:\n",
-    "                    temp.append(i)\n",
+    "                    temp.append(sigmoid(i))\n",
     "                    \n",
     "            products[temp_count] = products[temp_count] + temp\n",
     "            \n",
@@ -3330,7 +3329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3348,6 +3347,7 @@
     "from sklearn.ensemble import HistGradientBoostingClassifier\n",
     "from sklearn.datasets import make_hastie_10_2\n",
     "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.neural_network import MLPClassifier\n",
     "\n",
     "new_output = MultiLabelBinarizer().fit_transform(output)\n",
     "\n",
@@ -3363,7 +3363,8 @@
     "result_train = a.predict(features)\n",
     "\n",
     "\n",
-    "\n",
+    "clf = MLPClassifier(solver='lbfgs', alpha=1e-5,\n",
+    "                    hidden_layer_sizes=(5, 2), random_state=1)\n",
     "\n",
     "\n",
     "\n"
@@ -3371,16 +3372,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "70.77880665773642"
+       "25.126607979222506"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3424,13 +3425,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "(array([[0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
        "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
        "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
        "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
@@ -3442,7 +3443,7 @@
        "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]]))"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3467,14 +3468,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.606654861877626\n"
+      "16.384979163818404\n"
      ]
     }
    ],
