--- a/csv_import/carrefour.ipynb
+++ b/csv_import/carrefour.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 637,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 638,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 639,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 640,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 641,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "{'KG', 'L', 'U', nan}"
       ]
      },
-     "execution_count": 353,
+     "execution_count": 641,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 642,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 643,
    "metadata": {},
    "outputs": [
     {
@@ -1716,7 +1716,7 @@
        "[17271 rows x 16 columns]"
       ]
      },
-     "execution_count": 355,
+     "execution_count": 643,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1727,7 +1727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 644,
    "metadata": {},
    "outputs": [
     {
@@ -1753,9 +1753,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 647,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Word2Vec(vocab=26, size=10, alpha=0.025)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Applications/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:128: DeprecationWarning: Call to deprecated `__contains__` (Method will be removed in 4.0.0, use self.wv.__contains__() instead).\n",
+      "/Applications/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:129: DeprecationWarning: Call to deprecated `__getitem__` (Method will be removed in 4.0.0, use self.wv.__getitem__() instead).\n",
+      "/Applications/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:138: DeprecationWarning: Call to deprecated `__contains__` (Method will be removed in 4.0.0, use self.wv.__contains__() instead).\n",
+      "/Applications/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:139: DeprecationWarning: Call to deprecated `__getitem__` (Method will be removed in 4.0.0, use self.wv.__getitem__() instead).\n",
+      "/Applications/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:148: DeprecationWarning: Call to deprecated `__contains__` (Method will be removed in 4.0.0, use self.wv.__contains__() instead).\n",
+      "/Applications/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:149: DeprecationWarning: Call to deprecated `__getitem__` (Method will be removed in 4.0.0, use self.wv.__getitem__() instead).\n",
+      "/Applications/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:158: DeprecationWarning: Call to deprecated `__contains__` (Method will be removed in 4.0.0, use self.wv.__contains__() instead).\n",
+      "/Applications/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:159: DeprecationWarning: Call to deprecated `__getitem__` (Method will be removed in 4.0.0, use self.wv.__getitem__() instead).\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import Counter\n",
     "\n",
@@ -1768,7 +1790,7 @@
     "        sentance = sentance.replace('/',' ')\n",
     "        sentance = re.sub(r'\\d+', '', sentance)\n",
     "        sentance = sentance.replace('\\\\',' ')\n",
-    "        sentance = re.sub(r'[^\\w\\s]','',sentance)\n",
+    "        sentance = re.sub(r'[^\\w\\s]',' ',sentance)\n",
     "        for y in sentance.split():\n",
     "            dic[y] += 1\n",
     "    res = sorted(dic.keys(),key = lambda p : dic[p])\n",
@@ -1798,6 +1820,7 @@
     "        products[i] = []\n",
     "\n",
     "    # add small info\n",
+    "#     ,'SEG_REF_CAPA_TYPE','SANS_SUCRE','PORC','SANS_GLUTEN'\n",
     "    useful_data_info = ['Rayon']\n",
     "    for info in useful_data_info:\n",
     "        count = Counter(dataset[info])\n",
@@ -1815,7 +1838,7 @@
     "            \n",
     "            temp_count += 1\n",
     "    \n",
-    "    # add famille\n",
+    "    add famille\n",
     "    for i in range(len(dataset['Famille'])):\n",
     "        x = dataset['Famille'][i]\n",
     "        sentance = split_famille(x)\n",
@@ -1851,24 +1874,9 @@
     "            if word in desc2_common:\n",
     "                temp_vector[desc2_common.index(word)] += 1\n",
     "        products[i] = products[i] + temp_vector\n",
-    "#     for i in range(len(dataset['DESC1'])):\n",
-    "#         x = dataset['DESC1'][i]\n",
-    "#         sentance = split_famille(x)\n",
-    "#         temp_vector = [0] * len(voc)\n",
-    "#         for word in sentance:\n",
-    "#             if word in voc:\n",
-    "#                 temp_vector[voc.index(word)] += 1\n",
-    "#         products[i] = products[i] + temp_vector\n",
-    "#     for i in range(len(dataset['DESC2'])):\n",
-    "#         x = dataset['DESC2'][i]\n",
-    "#         sentance = split_famille(x)\n",
-    "#         temp_vector = [0] * len(voc)\n",
-    "#         for word in sentance:\n",
-    "#             if word in voc:\n",
-    "#                 temp_vector[voc.index(word)] += 1\n",
-    "#         products[i] = products[i] + temp_vector\n",
+    "\n",
     "    \n",
-    "#     return products\n",
+    "    return products\n",
     "\n",
     "output = [x for x in new_dataset[\"tags\"]]\n",
     "def del_coma(dataset):\n",
@@ -1878,10 +1886,77 @@
     "            dataset.at[i,x]  = dataset[x][i].replace('/',' ')\n",
     "            \n",
     "\n",
+    "def extract_wrd2vec(new_dataset):\n",
+    "    dt = new_dataset[['DESC1','DESC2']]\n",
+    "\n",
+    "    del_coma(dt)\n",
+    "\n",
+    "    dt = dt.apply(lambda x: ','.join(x.astype(str)), axis=1)\n",
+    "\n",
+    "    df_clean = pandas.DataFrame({'clean': dt})\n",
+    "    sent = most_common(new_dataset,'DESC1')[:600] + most_common(new_dataset,'DESC2')[:600] + most_common(new_dataset,'Famille')[:]+ most_common(new_dataset,'Sous_famille')[:]\n",
+    "    for i in range(len(sent)):\n",
+    "        sent[i] = list(sent[i])\n",
+    "    \n",
+    "    model = Word2Vec(sent, min_count=1,size= 10,workers=3, window =3, sg = 1)\n",
+    "    print(model)\n",
+    "    \n",
+    "    features1 = [list(np.zeros(10))] *len(dataset['DESC1'])\n",
+    "    for i in range(len(dataset['DESC1'])):\n",
+    "        x = dataset['DESC1'][i]\n",
+    "        sentance = split_famille(x)\n",
+    "        for word in sentance:\n",
+    "            if word in model:\n",
+    "                features1[i] = list(model[word])\n",
+    "                break\n",
+    "    features2 = [list(np.zeros(10))] *len(dataset['DESC2'])\n",
+    "    for i in range(len(dataset['DESC2'])):\n",
+    "        x = dataset['DESC2'][i]\n",
+    "        if type(x) == float:\n",
+    "            break\n",
+    "        sentance = split_famille(x)\n",
+    "        for word in sentance:\n",
+    "            if word in model:\n",
+    "                features2[i] = list(model[word])\n",
+    "                break\n",
+    "    features3 = [list(np.zeros(10))] *len(dataset['Sous_famille'])\n",
+    "    for i in range(len(dataset['Sous_famille'])):\n",
+    "        x = dataset['Sous_famille'][i]\n",
+    "        if type(x) == float:\n",
+    "            break\n",
+    "        sentance = split_famille(x)\n",
+    "        for word in sentance:\n",
+    "            if word in model:\n",
+    "                features2[i] = list(model[word])\n",
+    "                break\n",
+    "    features4 = [list(np.zeros(10))] *len(dataset['Famille'])\n",
+    "    for i in range(len(dataset['Famille'])):\n",
+    "        x = dataset['Famille'][i]\n",
+    "        if type(x) == float:\n",
+    "            break\n",
+    "        sentance = split_famille(x)\n",
+    "        for word in sentance:\n",
+    "            if word in model:\n",
+    "                features2[i] = list(model[word])\n",
+    "                break\n",
+    "        \n",
+    "    res = [0]*len(features1)\n",
+    "    for i in range(len(features1)):\n",
+    "        res[i] = features1[i] + features2[i] +features3[i] + features4[i]     \n",
+    "                   \n",
+    "    return res\n",
     "\n",
     "\n",
-    "\n",
-    "features = extract(new_dataset)\n"
+    "def get_f_features(new_dataset):\n",
+    "    features1 = extract(new_dataset)\n",
+    "    features2 = extract_wrd2vec(new_dataset)\n",
+    "    res = [0]*len(features1)\n",
+    "    for i in range(len(features1)):\n",
+    "        res[i] = features1[i] + features2[i]\n",
+    "        \n",
+    "    return res\n",
+    "features = get_f_features(new_dataset)\n",
+    "# features = extract(new_dataset)"
    ]
   },
   {
@@ -1893,7 +1968,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 648,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 648,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 649,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1956,14 +2051,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 650,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "77.11410587431003\n"
+      "8.25590829759667\n"
      ]
     }
    ],
@@ -1998,7 +2093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 651,
    "metadata": {
     "scrolled": true
    },
@@ -2007,9 +2102,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Word2Vec(vocab=26, size=10, alpha=0.025)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Applications/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:128: DeprecationWarning: Call to deprecated `__contains__` (Method will be removed in 4.0.0, use self.wv.__contains__() instead).\n",
+      "/Applications/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:129: DeprecationWarning: Call to deprecated `__getitem__` (Method will be removed in 4.0.0, use self.wv.__getitem__() instead).\n",
+      "/Applications/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:138: DeprecationWarning: Call to deprecated `__contains__` (Method will be removed in 4.0.0, use self.wv.__contains__() instead).\n",
+      "/Applications/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:139: DeprecationWarning: Call to deprecated `__getitem__` (Method will be removed in 4.0.0, use self.wv.__getitem__() instead).\n",
+      "/Applications/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:148: DeprecationWarning: Call to deprecated `__contains__` (Method will be removed in 4.0.0, use self.wv.__contains__() instead).\n",
+      "/Applications/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:149: DeprecationWarning: Call to deprecated `__getitem__` (Method will be removed in 4.0.0, use self.wv.__getitem__() instead).\n",
+      "/Applications/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:158: DeprecationWarning: Call to deprecated `__contains__` (Method will be removed in 4.0.0, use self.wv.__contains__() instead).\n",
+      "/Applications/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:159: DeprecationWarning: Call to deprecated `__getitem__` (Method will be removed in 4.0.0, use self.wv.__getitem__() instead).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "4187\n",
       "4187\n",
-      "75.80073483823209\n"
+      "9.168205742722087\n"
      ]
     }
    ],
@@ -2019,8 +2135,8 @@
     "new_dataset_test, empty = sanitize_tags(dataset_test, tags_to_remove, tags_to_keep)\n",
     "new_dataset_test.dropna()\n",
     "new_dataset_test =new_dataset_test.reset_index(drop=True)\n",
-    "\n",
-    "features_test = extract(new_dataset_test)\n",
+    "new_dataset_test= new_dataset_test.reset_index(drop = True)\n",
+    "features_test = get_f_features(new_dataset_test)\n",
     "output_test = [x for x in new_dataset_test[\"tags\"]]\n",
     "\n",
     "\n",
